syntax = "proto3";

option go_package = "github.com/sivasenthil09/bank_transaction";

package bank_transaction;

service  CustomerService {
    rpc CreateCustomer (Customer) returns (CustomerResponse);
    rpc Transaction(Customer) returns (CustomerResponse);
}


message Customer {

    int32 CustomerID=1;
    string FirstName=2; 
    string LastName=3;
    int32 BankID=4;
    int32 Balance=5;
    string CreatedAt=6;
    string UpdatedAt=7; 
    bool IsActive=8;
    int32 Transaction_amount = 9;
}

message  CustomerResponse {
    int32 CustomerID=1;
    string CreatedAt=2;
}